pingpong-log-output/deploy/kubernetes/base/00-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: pingpong-files-claim
      containers:
        - name: pingpong
          image: sirpacoder/pingpong:v4.1
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/shared/files
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
